@@ -1,0 +1,4 @@
+
+void ifstat_update_proc (void) { return; }
+#pragma weak rtadv_config_write = ifstat_update_proc
+#pragma weak irdp_config_write = ifstat_update_proc
